--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -28,7 +28,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Helvetica;
 }
 ol, ul {
 	list-style: none;
