--- a/app/assets/stylesheets/header/header.css
+++ b/app/assets/stylesheets/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  border-bottom: 1px solid #043d99;
+  border-bottom: 1px solid #eff2f5;
   height: 60px;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .header-logo {
-  border-right: 1px solid #043d99;
+  border-right: 1px solid #eff2f5;
 }
 
 .header-logo > a {
@@ -30,16 +30,17 @@
   justify-content: space-between;
 }
 
-.header-list > li {
+.header-list li {
   display: flex;
-  border-left: 1px solid #043d99;
+  border-left: 1px solid #eff2f5;
 }
 
-.header-list > li:hover {
+.header-list li:hover {
   background: #eff2f5;
 }
 
-.header-list a {
+.header-list button {
+  cursor: pointer;
   text-transform: uppercase;
   color: #45494e;
   font-size: 12px;
