Fix img src again

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
       window.eventbryteAssets = {
         headerLogo: "<%= image_url("logo.png") %>",
         homeScreenImage: {
-          1: "<%= image_url("home-image-1") %>"
+          1: "<%= image_url("home-image-1.jpg") %>"
         }
       }
     </script>
