Add slideshow for home

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
     <script type="text/javascript">
       window.eventbryteAssets = {
         headerLogo: "<%= image_url("logo.png") %>",
-        homeScreenImage: {
-          1: "<%= image_url("home-image-1.jpg") %>"
+        homeScreenImages: {
+          1: "<%= image_url("home-image-1.jpg") %>",
+          2: "<%= image_url("home-image-2.jpg") %>",
+          3: "<%= image_url("home-image-3.jpg") %>",
+          4: "<%= image_url("home-image-4.jpg") %>",
+          5: "<%= image_url("home-image-5.jpg") %>"
         }
       }
     </script>
