--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,10 @@
       window.eventbryteAssets = {
         headerLogo: "<%= image_url("logo.png") %>",
         homeScreenImages: {
-          1: "<%= image_url("home-image-1.jpg") %>",
-          2: "<%= image_url("home-image-2.jpg") %>",
-          3: "<%= image_url("home-image-3.jpg") %>",
-          4: "<%= image_url("home-image-4.jpg") %>",
-          5: "<%= image_url("home-image-5.jpg") %>"
+          1: "<%= image_url("slideshow-image-1.jpg") %>",
+          2: "<%= image_url("slideshow-image-2.jpg") %>",
+          3: "<%= image_url("slideshow-image-3.jpg") %>",
+          4: "<%= image_url("slideshow-image-4.jpg") %>",
         }
       }
     </script>
