Update modal css

--- a/app/assets/stylesheets/api/modal.scss
+++ b/app/assets/stylesheets/api/modal.scss
@@ -1,3 +1,11 @@
+.modal-login {
+  z-index: 11;
+}
+
+.modal-login-overlay {
+  z-index: 10;
+}
+
 .modal-close {
   cursor: pointer;
   position: absolute;
