--- a/app/assets/stylesheets/home_screen.scss
+++ b/app/assets/stylesheets/home_screen.scss
@@ -6,8 +6,9 @@
 }
 
 .slideshow-overlay {
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  height: 100%;
+  max-height: 500px;
   position: absolute;
   background: rgba(0, 0, 0, 0.4);
   z-index: 1;
