--- a/app/assets/stylesheets/api/modal.scss
+++ b/app/assets/stylesheets/api/modal.scss
@@ -15,6 +15,21 @@
   color: #666A73;
 }
 
+.user-info-form-container {
+  width: 330px;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 20px 10px;
+  border: 1px solid rgb(210, 214, 223);
+  margin: 50px auto;
+  border-radius: 4px;
+  background: #ffffff;
+}
+
+.user-info-form {
+  width: 100%;
+}
+
 .user-info-form h2 {
   font-size: 25px;
 }
