Add places library to google map api

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <title>Eventbryte</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100i,300i,400i,700i,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAiBgZxTERyrcttyb4sAuAOxLH6KywqXcs"%>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAiBgZxTERyrcttyb4sAuAOxLH6KywqXcs&libraries=places"%>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
