--- a/app/assets/stylesheets/api/event_form.scss
+++ b/app/assets/stylesheets/api/event_form.scss
@@ -117,15 +117,20 @@
 }
 
 .map-container {
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  height: 215px;
 }
 
 #thumb-map {
-  width: 80%;
+  width: 100%;
+  min-width: 200px;
   max-width: 400px;
-  height: calc(100% - 5px);
+  height: 100%;
   border-radius: 3px;
+}
+
+.column > div input.hidden {
+  display: none;
 }
 
 .type-selector-container select,
