--- a/app/assets/stylesheets/api/event_form.scss
+++ b/app/assets/stylesheets/api/event_form.scss
@@ -197,3 +197,41 @@
   background: #00d656;
   color: #ffffff;
 }
+
+.upload-form > div {
+  width: 410px;
+  height: 210px;
+  padding: 10px;
+  background: #ffffff;
+  border-radius: 3px;
+  border: 1px solid rgb(210, 214, 223);
+  cursor: pointer;
+  position: relative;
+}
+
+.upload-form > div > img,
+.upload-form > div > div {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border: 3px dashed #d2d6df;
+  background: white;
+}
+
+.upload-form > div:hover > img,
+.upload-form > div:hover > div {
+  border: 3px dashed #22b8ff;
+}
+
+.upload-form i {
+  font-size: 500%;
+  color: rgb(210, 214, 223);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.upload-form > div:hover i {
+  color: #22b8ff;
+}
