--- a/app/assets/stylesheets/api/event_form.scss
+++ b/app/assets/stylesheets/api/event_form.scss
@@ -251,3 +251,53 @@ button.image-remove i {
 button.image-remove:hover {
   color: #22b8ff;
 }
+
+input.number {
+  width: 110px;
+}
+
+
+
+//
+// .tickets-container {
+//
+// }
+//
+// .tickets-actions {
+//   text-align: center;
+// }
+//
+// .tickets-actions > button {
+//   width: 170px;
+//   text-align: center;
+//   border: 2px solid rgb(0, 161, 238);
+//   color: rgb(0, 161, 238);
+//   font-size: 15px;
+//   text-transform: uppercase;
+//   border-radius: 3px;
+//   padding: 10px 18px;
+//   cursor: pointer;
+// }
+//
+// .tickets-actions > button:hover {
+//   border: 2px solid rgb(77, 189, 243);
+//   background: rgb(77, 189, 243);
+//   color: #ffffff;
+// }
+//
+// .tickets-actions > button:first-child {
+//   margin-right: 20px;
+// }
+//
+// .tickets-actions > button span {
+//   border: 1px solid rgb(0, 161, 238);
+//   border-radius: 50%;
+//   margin-right: 10px;
+//   font-size: 15px;
+//   font-weight: 700;
+//   padding: 0 5px 1px 5px;
+// }
+//
+// .tickets-actions > button:hover span {
+//   border: 1px solid #fff;
+// }
