--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -42,7 +42,7 @@
 }
 
 .event-image-container {
-  width: 66.67%;
+  width: calc(200% / 3);
   border-top-left-radius: 3px;
   overflow: hidden;
 }
@@ -53,7 +53,7 @@
 }
 
 .event-summary {
-  width: 33.33%;
+  width: calc(100% / 3);
   border-top-right-radius: 3px;
   display: flex;
   flex-direction: column;
@@ -156,4 +156,32 @@
 #event-detail-map {
   width: 100%;
   height: 100%;
+}
+
+.event-actions-container {
+  background: #ffffff;
+  padding: 10px 30px;
+  border-bottom: 1px solid rgb(210, 214, 223);
+  display: flex;
+  justify-content: space-between;
+}
+
+.event-register-button {
+  width: calc(100% / 3);
+}
+
+.event-register-button > button {
+  width: calc(100% + 30px);
+  transform: translateX(-15px);
+  color: #ffffff;
+  text-transform: uppercase;
+  padding: 10px 30px;
+  background: #00cc52;
+  border-radius: 3px;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+}
+
+.event-register-button > button:hover {
+  background: #00d656;
 }
