Show organizer email address on show page

--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -86,6 +86,10 @@
   margin-top: 20px;
 }
 
+.event-main-info h4 span {
+  font-style: italic;
+}
+
 .event-month {
   font-size: 12px;
   text-transform: uppercase;
