--- a/app/assets/stylesheets/api/browse_event.scss
+++ b/app/assets/stylesheets/api/browse_event.scss
@@ -134,3 +134,14 @@
 .bookmark-action:hover i.bookmark {
   color: #26bdff;
 }
+
+.no-events {
+  width: 100%;
+  text-align: center;
+}
+
+.no-events h1 {
+  color: #eee;
+  font-size: 100px;
+  text-transform: uppercase;
+}
