--- a/app/assets/stylesheets/api/event_form.scss
+++ b/app/assets/stylesheets/api/event_form.scss
@@ -31,6 +31,10 @@
   padding-bottom: 4px;
 }
 
+.create-event-form div.title-container:nth-child(n+2) {
+  margin-top: 50px;
+}
+
 .create-event-form span.index {
   background: #00a8f2;
   color: #ffffff;
@@ -255,49 +259,3 @@ button.image-remove:hover {
 input.number {
   width: 110px;
 }
-
-
-
-//
-// .tickets-container {
-//
-// }
-//
-// .tickets-actions {
-//   text-align: center;
-// }
-//
-// .tickets-actions > button {
-//   width: 170px;
-//   text-align: center;
-//   border: 2px solid rgb(0, 161, 238);
-//   color: rgb(0, 161, 238);
-//   font-size: 15px;
-//   text-transform: uppercase;
-//   border-radius: 3px;
-//   padding: 10px 18px;
-//   cursor: pointer;
-// }
-//
-// .tickets-actions > button:hover {
-//   border: 2px solid rgb(77, 189, 243);
-//   background: rgb(77, 189, 243);
-//   color: #ffffff;
-// }
-//
-// .tickets-actions > button:first-child {
-//   margin-right: 20px;
-// }
-//
-// .tickets-actions > button span {
-//   border: 1px solid rgb(0, 161, 238);
-//   border-radius: 50%;
-//   margin-right: 10px;
-//   font-size: 15px;
-//   font-weight: 700;
-//   padding: 0 5px 1px 5px;
-// }
-//
-// .tickets-actions > button:hover span {
-//   border: 1px solid #fff;
-// }
