--- a/app/assets/stylesheets/api/browse_event.scss
+++ b/app/assets/stylesheets/api/browse_event.scss
@@ -87,7 +87,7 @@
 .single-event-price-info {
   width: 200px;
   background: rgb(239, 242, 245);
-  padding: 10px 20px;
+  padding: 10px 15px;
   box-sizing: border-box;
 }
 
@@ -102,7 +102,7 @@
   padding: 10px 20px;
 }
 
-.single-event-tags a {
+.single-event-tags span {
   cursor: pointer;
   padding-right: 10px;
 }
