--- a/app/assets/stylesheets/home_screen.scss
+++ b/app/assets/stylesheets/home_screen.scss
@@ -1,14 +1,14 @@
 .home-screen {
   width: 100%;
-  height: 36vw;
-  max-height: 500px;
+  height: 80vh;
+  max-height: 80vh;
   position: relative;
 }
 
 .slideshow-overlay {
   width: 100%;
-  height: 100%;
-  max-height: 500px;
+  height: 80vh;
+  max-height: 80vh;
   position: absolute;
   background: rgba(0, 0, 0, 0.4);
   z-index: 1;
@@ -28,7 +28,6 @@
 .slideshow-container img {
   width: 100%;
   height: 100%;
-  transform: translateY(-20%);
 }
 
 .home-screen-content {
