--- a/app/assets/stylesheets/home_screen.scss
+++ b/app/assets/stylesheets/home_screen.scss
@@ -54,7 +54,7 @@
 .home-button-container {
 }
 
-.home-button-container button {
+.home-button-container button a {
   cursor: pointer;
   background: #00a8f2;
   border-radius: 3px;
