--- a/app/assets/stylesheets/api/react_select.scss
+++ b/app/assets/stylesheets/api/react_select.scss
@@ -33,7 +33,7 @@
   // border-radius: 4px;
   // border: 1px solid #ccc;
   color: #00a1ee;
-  cursor: default;
+  cursor: pointer;
   display: table;
   border-spacing: 0;
   border-collapse: separate;
